add package.json version

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-standard",
+  "version": "1.0.0",
   "devDependencies": {
     "@imgcook/dsl-helper": "^0.0.1-alpha.0",
     "co": "^4.6.0",
