--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-stage-0": "^7.0.0",
     "@imgcook/dsl-helper": "0.0.1-alpha.0",
+    "@types/node": "^16.11.7",
+    "chai": "^4.3.4",
     "co": "^4.6.0",
+    "css": "^3.0.0",
     "fs-extra": "^8.0.1",
     "lodash": "^4.17.11",
+    "mocha": "^9.1.3",
+    "nyc": "^15.1.0",
     "prettier": "^1.11.1",
     "thunkify": "^2.1.2",
+    "ts-loader": "^8.2.0",
+    "typescript": "^4.4.4",
     "vm2": "^3.5.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
@@ -20,10 +27,10 @@
   "scripts": {
     "debug": "npx webpack --config webpack.config.js --mode=development",
     "build": "npx webpack --config webpack.config.js --mode=production",
-    "test": "npm run build && node ./test/index.js",
-    "start": "node ./test/index.js"
+    "demo": "node ./test/index.js",
+    "test": "mocha  --colors test/**/*.test.js",
+    "start": "node ./test/index.js",
+    "test-with-coverage": "nyc --reporter=html mocha --exit  --colors test/**/*.test.js "
   },
-  "dependencies": {
-    "css": "^3.0.0"
-  }
+  "dependencies": {}
 }
